# clidup

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml
clidup/: __init__.py
clidup/cli/: main.py
clidup/config/: loader.py
clidup/core/: backup.py  compression.py  restore.py
clidup/databases/: __init__.py  base.py  factory.py  mongodb.py  mysql.py  postgres.py  sqlite.py
clidup/logging/: logger.py
tests/: conftest.py  test_cli.py  test_config.py  test_factory.py  test_handlers.py
